Created legacy system Adaptor
Created additional 'create student' functionality that uses legacy format via an adaptor
